--- a/style.css
+++ b/style.css
@@ -1,3 +1,45 @@
 * {
     font-family: 'Poppins', sans-serif;
 }
+
+body {
+    display: flex;
+    color: #1F1F3C;
+    background-color:#EAEAF4 ; 
+}
+
+/* main{
+    display: flex;
+    align-items: center;
+} */
+
+.input-form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+}
+
+h1 {
+background-color:#1F1F3C;
+color:#EAEAF4;
+}
+
+.top-box {
+    background-color: #A8AAD2;
+}
+
+.input-1, .input-2 {
+
+}
+.input-2 {
+
+}
+
+.save-button{
+
+}
+
+* {
+    border: 1px solid red;
+}
