Add color to save box

--- a/style.css
+++ b/style.css
@@ -3,17 +3,18 @@
 }
 
 body {
+    border: 1px solid blue;
     display: flex;
     color: #1F1F3C;
     background-color:#EAEAF4 ; 
 }
 
-/* main{
-    display: flex;
-    align-items: center;
-} */
+main {
+    background-color:#A8AAD2 ;
+}
 
 .input-form {
+    border: 1px solid black;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -21,8 +22,13 @@ body {
 }
 
 h1 {
+    border: 1px solid skyblue;
 background-color:#1F1F3C;
 color:#EAEAF4;
+}
+
+header {
+    background-color: #1F1F3C;
 }
 
 .top-box {
