--- a/style.css
+++ b/style.css
@@ -4,9 +4,15 @@
 
 body {
     border: 1px solid blue;
+    border-left: 20px solid black;
+    border-right: 20px solid black;
     display: flex;
     color: #1F1F3C;
-    background-color:#EAEAF4 ; 
+    background-color:#EAEAF4;
+    margin-top: 0;
+    margin-bottom: 0;
+    margin-left: 0;
+    margin-right: 0; 
 }
 
 main {
@@ -17,10 +23,12 @@ main {
 }
 
 .input-form {
+  height: 100%;
   border: 1px solid black;
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: space-evenly;
 }
 
 h1 {
@@ -35,22 +43,22 @@ h1 {
 }
 
 header {
-  width: 300px;
-  padding-bottom: 65%;
+  width: 25%;
+  padding-bottom: 40%;
   background-color: #1F1F3C;
 }
 
 .top-box {
-  width: 500%;
-  height: 35%;
+  width: 552%;
+  height: 50%;
   padding-right: 50%;
   padding-left: 50%;
   background-color: #A8AAD2;
 }
 
 .bottom-box {
-  width: 500%;
-  height: 35%;
+  width: 552%;
+  height: 50%;
   padding-right: 50%;
   padding-left: 50%;
   background-color:aliceblue;
