Add labels for our 2 input boxes and updated width

--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@ header {
 }
 
 .top-box {
-  width: 552%;
+  width: 525px;
   height: 50%;
   padding-right: 50%;
   padding-left: 50%;
@@ -57,7 +57,7 @@ header {
 }
 
 .bottom-box {
-  width: 552%;
+  width: 525px;
   height: 50%;
   padding-right: 50%;
   padding-left: 50%;
