--- a/style.css
+++ b/style.css
@@ -41,6 +41,7 @@ h1 {
   display: flex;
   justify-content: center;
   letter-spacing: 1mm;
+  font-weight: lighter;
 }
 
 header {
@@ -65,19 +66,71 @@ header {
   background-color:aliceblue;
 }
 
+.input-1,
+.input-2 {
+  box-sizing: border-box;
+  width: 100%;
+  height: 50px;
+  font-size: 35px;
+  padding-left: 100px;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  text-align: right;
+}
+
+#input-1 {
+  width: 75%;
+  height: 55px;
+  font-size: 25px;
+  margin-left: 15px;
+  border: 5px solid #1f1f3c;
+}
+
+#input-2 {
+  width: 75%;
+  height: 100px;
+  font-size: 25px;
+  margin-left: 15px;
+  border: 5px solid #1f1f3c;
+}
+.save-button {
+  background-color: #1F1F3C;
+  color: white;
+}
+
+.disabled {
+  background-color: #d3d3d3;
+  cursor: default;
+}
+
 #input-1, 
 #input-2 {
-  padding: 14px 165px;
+  
+    /* width: 100%;
+    padding: 12px 20px;
+    margin: 8px 0; */
+    /* box-sizing: border-box; */
+  /* padding: 14px 165px;
   margin: 8px 0;
-  box-sizing: border-box;
+  box-sizing: border-box; */
 }
-.input-2 {
+/* .input-2 {
+  /* box-sizing: border-box;
+  width: 75%; */
 
+
+/* .save-button{ */ */
+
+
+.hidden {
+  display: none;
 }
+/* 
+puts this on the label    
+box-sizing: border-box;
+width: 75%; */
 
-.save-button{
-
-}
 
 /* * {
     border: 1px solid red;
