--- a/style.css
+++ b/style.css
@@ -66,6 +66,11 @@ header {
   background-color:aliceblue;
 }
 
+.card-container {
+  border: solid red;
+
+}
+
 .input-1,
 .input-2 {
   box-sizing: border-box;
@@ -135,4 +140,11 @@ width: 75%; */
 
 /* * {
     border: 1px solid red;
+} */
+
+/* .saved-posters-grid {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-gap: 20px;
+  padding: 20px;
 } */
