--- a/style.css
+++ b/style.css
@@ -68,6 +68,7 @@ header {
 
 .card-container {
   border: solid red;
+  height: 100%;
 
 }
 
@@ -104,6 +105,35 @@ header {
   color: white;
 }
 
+.card-header {
+  padding-bottom: 0 ;
+  width: 100%;
+  display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+
+.favorite-on,
+.favorite-off,
+.delete-button {
+width: 50px;
+background-color: transparent
+/* height: 100px; */
+}
+
+.idea-cards {
+  border: solid;
+  width: 30%;
+  display: flex;
+  flex-direction: column;
+}
+
+.card-body {
+  border: 1px solid black;
+  height: 50%;
+  width: 50px;
+}
 
 #input-1, 
 #input-2 {
