--- a/style.css
+++ b/style.css
@@ -69,7 +69,10 @@ header {
 .card-container {
   border: solid red;
   height: 100%;
-
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center;
 }
 
 .input-1,
@@ -83,13 +86,14 @@ header {
   flex-direction: row;
   justify-content: flex-start;
   text-align: right;
+  align-items: center;
 }
 
 #input-1 {
   width: 75%;
   height: 55px;
   font-size: 25px;
-  margin-left: 15px;
+  margin-left: 28px;
   border: 5px solid #1f1f3c;
 }
 
@@ -109,8 +113,10 @@ header {
   padding-bottom: 0 ;
   width: 100%;
   display: flex;
-    flex-direction: row;
-    justify-content: space-between;
+  flex-direction: row;
+  justify-content: space-between;
+  height: 48px;
+  border-bottom: 1px solid;
 }
 
 
@@ -124,15 +130,22 @@ background-color: #1F1F3C;
 
 .idea-cards {
   border: solid;
-  width: 30%;
+  width: 275px;
+  height: 325px;
   display: flex;
   flex-direction: column;
+  /* align-items: center; */
 }
 
 .card-body {
   border: 1px solid black;
   height: 50%;
   width: 50px;
+}
+
+.header-buttons {
+  padding: 0;
+  border: none;
 }
 
 #input-1, 
