--- a/style.css
+++ b/style.css
@@ -3,13 +3,11 @@
 }
 
 body {
+    overflow:hidden;
     display: flex;
     color: #1F1F3C;
     background-color:#EAEAF4;
-    margin-top: 0;
-    margin-bottom: 0;
-    margin-left: 0;
-    margin-right: 0;
+    margin: 0;
     width: 100%;
 }
 
@@ -21,7 +19,6 @@ main {
 
 .input-form {
   height: 100%;
-  border: 1px solid black;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -40,14 +37,38 @@ h1 {
   font-weight: lighter;
 }
 
-header {
+aside {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  align-content: center;
   width: 25%;
-  padding-bottom: 41%;
+  padding-bottom: 39.5%;
   background-color: #1F1F3C;
 }
 
+.show-starred {
+  background-color: #A8AAD2;
+  border: none;
+  font-size: 25px;
+  color: #1F1F3C;
+  padding: 20px;
+  cursor: pointer;
+  transition-duration: 0.3s;
+}
+
+.show-all {
+  background-color: #A8AAD2;
+  border: none;
+  font-size: 25px;
+  color: #1F1F3C;
+  padding: 20px;
+  cursor: pointer;
+  transition-duration: 0.3s;
+}
+
 .top-box {
-  width: 1100px;
+  width: 1300px;
   height: 50%;
   background-color: #A8AAD2;
 }
@@ -59,7 +80,7 @@ header {
 }
 
 .card-container {
-  border: solid red;
+  background-color: #EAEAF4 ;
   height: 100%;
   display: flex;
   flex-direction: row;
@@ -83,12 +104,13 @@ header {
 
 .save-button {
   background-color: #1F1F3C;
+  font-size: 40px;
   color: white;
   width: 70%;
-  height: 56px;
-  margin-left: 75px;
-
+  height: 80px;
+  margin-left: 15px;
 }
+
 #input-1 {
   width: 75%;
   height: 55px;
@@ -107,6 +129,7 @@ header {
 
 .card-header {
   padding-bottom: 0 ;
+  background-color: #1F1F3C;
   width: 100%;
   display: flex;
   flex-direction: row;
@@ -114,7 +137,6 @@ header {
   height: 48px;
   border-bottom: 1px solid;
 }
-
 
 .favorite-star,
 .delete-button {
