--- a/style.css
+++ b/style.css
@@ -45,6 +45,8 @@ aside {
 	width: 25%;
 	padding-bottom: 39.5%;
 	background-color: #1F1F3C;
+  padding-right: 25px;
+  padding-left: 25px;
 }
 
 .show-starred {
@@ -55,6 +57,9 @@ aside {
 	padding: 20px;
 	cursor: pointer;
 	transition-duration: 0.3s;
+  padding: 0;
+  padding-top: 20px;
+  padding-bottom: 20px;
 }
 
 .show-all {
