--- a/style.css
+++ b/style.css
@@ -23,6 +23,7 @@ main {
 	flex-direction: column;
 	align-items: center;
 	justify-content: space-evenly;
+  width: 90%;
 }
 
 h1 {
@@ -74,14 +75,15 @@ aside {
 
 .top-box {
 	width: 1300px;
-	height: 50%;
+	height: 45%;
 	background-color: #A8AAD2;
 }
 
 .bottom-box {
 	width: 1100px;
-	height: 50%;
+	height: 42%;
 	background-color: #EAEAF4;
+  overflow: auto;
 }
 
 .card-container {
@@ -92,11 +94,12 @@ aside {
 	flex-direction: row;
 	justify-content: space-evenly;
 	align-items: center;
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    /* display: grid; */
+    /* grid-template-columns: repeat(3, 1fr); */
     grid-gap: 20px;
     padding: 20px;
     overflow-y: scroll;
+    flex-wrap: wrap;
 }
 
 .input-1,
@@ -119,7 +122,7 @@ aside {
 	color: white;
 	width: 70%;
 	height: 80px;
-	margin-left: 15px;
+	margin-left: 56px;
 }
 
 #input-1 {
